Edit api definition
